--- a/22.07.2021/Python/test.ipynb
+++ b/22.07.2021/Python/test.ipynb
@@ -88,8 +88,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f463b00f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2377650e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = datetime.datetime(2021,7,21)\n",
+    "e = datetime.datetime.today()\n",
+    "\n",
+    "if(d>e):\n",
+    "    print(\"true\")\n",
+    "else:\n",
+    "    print(\"false\",int('07'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e270302f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from msvcrt import getch\n",
+    "\n",
+    "a = getch()ii"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "52742a1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len('1111111111111111'))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a314bed",
    "metadata": {},
    "outputs": [],
    "source": []
